deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microstrategy-metadata-dashboard
spec:
  type: ClusterIP
  selector:
    app: microstrategy-metadata-dashboard
  ports:
    - name: http
      port: 80
      targetPort: http
